// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`path children snapshot 1`] = `
list [
  Array [
    "book-1-aaa",
    list [],
  ],
  Array [
    "book-1-bbb",
    list [
      model {
        "_id": 3,
        "book_id": "book-1",
        "doc_id": "book-1-bbb-ccc",
        "doc_idx": "ccc",
        "folder_id": "book",
        "path_id": "book-1-bbb",
      },
      model {
        "_id": 4,
        "book_id": "book-1",
        "doc_id": "book-1-bbb-ddd",
        "doc_idx": "ddd",
        "folder_id": "book",
        "path_id": "book-1-bbb",
      },
    ],
  ],
  Array [
    "book-1-bbb-ccc",
    list [],
  ],
  Array [
    "book-1-bbb-ddd",
    list [
      model {
        "_id": 5,
        "book_id": "book-1",
        "doc_id": "book-1-bbb-ddd-eee",
        "doc_idx": "eee",
        "folder_id": "book",
        "path_id": "book-1-bbb-ddd",
      },
    ],
  ],
  Array [
    "book-1-bbb-ddd-eee",
    list [],
  ],
  Array [
    "book-1-ccc-ddd",
    list [],
  ],
  Array [
    "book-1-ccc-eee",
    list [],
  ],
  Array [
    "book-1-ddd-eee",
    list [],
  ],
  Array [
    "book-1-fff-ggg-hhh-iii",
    list [],
  ],
]
`;

exports[`path parent snapshot 1`] = `
list [
  Array [
    "book-1-aaa",
    undefined,
    undefined,
  ],
  Array [
    "book-1-bbb",
    undefined,
    undefined,
  ],
  Array [
    "book-1-bbb-ccc",
    "book-1-bbb",
    model {
      "_id": 2,
      "book_id": "book-1",
      "doc_id": "book-1-bbb",
      "doc_idx": "bbb",
      "folder_id": "book",
    },
  ],
  Array [
    "book-1-bbb-ddd",
    "book-1-bbb",
    model {
      "_id": 2,
      "book_id": "book-1",
      "doc_id": "book-1-bbb",
      "doc_idx": "bbb",
      "folder_id": "book",
    },
  ],
  Array [
    "book-1-bbb-ddd-eee",
    "book-1-bbb-ddd",
    model {
      "_id": 4,
      "book_id": "book-1",
      "doc_id": "book-1-bbb-ddd",
      "doc_idx": "ddd",
      "folder_id": "book",
      "path_id": "book-1-bbb",
    },
  ],
  Array [
    "book-1-ccc-ddd",
    "book-1-ccc",
    undefined,
  ],
  Array [
    "book-1-ccc-eee",
    "book-1-ccc",
    undefined,
  ],
  Array [
    "book-1-ddd-eee",
    "book-1-ddd",
    undefined,
  ],
  Array [
    "book-1-fff-ggg-hhh-iii",
    "book-1-fff-ggg-hhh",
    undefined,
  ],
]
`;

exports[`path reduce id snapshot 1`] = `
Object {
  "navi": Object {
    "book-1": Object {
      "book-1-aaa": 0,
      "book-1-bbb": Object {
        "book-1-bbb-ccc": 0,
        "book-1-bbb-ddd-eee": 0,
      },
      "book-1-ccc": Object {
        "book-1-ccc-ddd": 0,
        "book-1-ccc-eee": 0,
      },
      "book-1-ddd-eee": 0,
      "book-1-fff-ggg-hhh-iii": 0,
    },
  },
}
`;
